--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="details"></div>
 
     <script src="./bundle.js"></script>
   </body>
